[gd_scene load_steps=11 format=2]

[ext_resource path="res://Animations/Swan/swan_4.png" type="Texture" id=2]
[ext_resource path="res://Animations/Swan/swan_3.png" type="Texture" id=4]
[ext_resource path="res://Animations/Swan/swan_2.png" type="Texture" id=7]
[ext_resource path="res://Animations/Swan/swan_6.png" type="Texture" id=11]
[ext_resource path="res://Animations/Swan/swan_5.png" type="Texture" id=16]
[ext_resource path="res://Animations/Swan/swan_1.png" type="Texture" id=17]
[ext_resource path="res://Scripts/Swan.gd" type="Script" id=20]

[sub_resource type="CircleShape2D" id=6]
radius = 26.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 17 ) ],
"loop": true,
"name": "Peck",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 11.0
height = 18.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 20 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -6, -2 )
shape = SubResource( 6 )

[node name="SwanSheet" type="AnimatedSprite" parent="."]
position = Vector2( -30, -38 )
frames = SubResource( 1 )
animation = "Peck"
centered = false
flip_h = true

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 20, 0 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9, -4 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
